finish mobile style

--- a/index.html
+++ b/index.html
@@ -10,25 +10,62 @@
   <title>Frontend Mentor | Equalizer landing page</title>
 </head>
 <body>
-
-  We make your music sound extraordinary.
-
-  A system audio equalizer specifically designed for Android and iOS. Freely tune the 
-  way your music sounds with a professional grade parametric EQ & volume mixer. Control 
-  bass, mids, treble, gain control, reverb, and more!
-
-  Premium EQ
-
-  Get expert-level control with a robust equalizer, volume mixer, and spatial audio. Take 
-  your listening experience to a whole new level and access all our incredible features!
-
-  $4 / month
-
-  iOS Download
-  Android Download
-
-  All rights reserved © Equalizer 2021
-  Have any problems? Contact us via social media or email us at equalizer@example.com
-
+  <div class="wrapper">
+    <header>
+      <img src="assets/logo.svg" alt="equalizer" class="logo">
+      <h2>We make your music sound extraordinary.</h2>
+      <p>
+        A system audio equalizer specifically designed for Android and iOS. Freely tune the 
+        way your music sounds with a professional grade parametric EQ & volume mixer. Control 
+        bass, mids, treble, gain control, reverb, and more!
+      </p>
+     
+    </header>
+  
+ 
+  <main>
+    <div class="block1">
+      <img src="assets/illustration-app.png" alt="app" id="app">
+    </div>
+    <div class="block2">
+      <div class="block-txt">
+        <h2>Premium EQ</h2>
+        <p>
+          Get expert-level control with a robust equalizer, volume mixer, and spatial audio. Take 
+          your listening experience to a whole new level and access all our incredible features!
+        </p>
+        <p class="price"><span>$4</span>/ month </p>
+        <div class="buttons-div">
+          <button id="apple">
+            <img src="assets/icon-apple.svg" alt="ios">
+            <p>iOS Download</p>
+          </button>
+          <button id="android">
+              <img src="assets/icon-android.svg" alt="android">
+              <p>Android Download</p>
+          </button>
+        </div>
+      </div>
+      
+    </div>
+  </main>
+  
+  <footer>
+    <div class="footer-box">
+      <img src="assets/logo.svg" class="logo" alt="equalizer">
+      <p>
+        All rights reserved © Equalizer 2021
+        <br>
+        Have any problems? Contact us via social media or email us at <b>equalizer@example.com</b>
+      </p>
+      <div class="social">
+        <img src="assets/icon-facebook.svg" alt="facebook" class="icon">
+        <img src="assets/icon-instagram.svg" alt="instagram" class="icon">
+        <img src="assets/icon-twitter.svg" alt="twitter" class="icon">
+      </div>
+    </div>
+  </footer>
+ 
+  </div>
 </body>
 </html>
